# tracerx-mp

./: .gitignore  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  MULTI_PATIENT_IMPLEMENTATION_COMPLETE.md  README.md  README_ORCHESTRATION.md  VISUALIZATION_IMPLEMENTATION_SUMMARY.md  aggregation.sh  bootstrap.sh  init.sh  install_phylowgs.sh  longitudinal_visualization_plan.md  main.sh  main_init.sh  marker_selection.sh  master_pipeline.sh  monitor_pipeline.sh  multi_patient_pipeline.sh  phylowgs.sh  preprocess.sh  project.md  pyproject.toml  todo.md
0-preprocess/: process_tracerX.py
1-bootstrap/: bootstrap.py  bootstrap.sh  environment.yml  run_bootstrap.sh
2-phylowgs/: environment.yml  phylowgs.sh  run_phylowgs.sh
3-aggregation/: aggregate.py  aggregation.sh  analyze.py  environment.yml  process_tracerx_bootstrap.py  run_aggregation.sh  step3_aggregate.py  visualize.py
4-markers/: environment.yml  marker_selection.sh  optimize_fraction.py  run_data.py  run_data_multi_sample.py  run_markers.sh  step4_optimize_fraction.py  step4_run_data.py  step4_run_data_multi_sample.py  test_multi_sample_hpc.sh
5-long/: README.md  README_YAML_CONFIG.md  adjust_tree_distribution.py  config_schema.yaml  data_loader.py  dynamic_analysis.py  example_usage.md  fixed_analysis.py  iterative_pipeline_real.py  longitudinal_analysis.sh  longitudinal_analysis_fixed.sh  longitudinal_analysis_yaml.sh  longitudinal_update.py  longitudinal_visualizer.py  optimize_fraction.py  tree_updater.py  utils.py  visualize.py
configs/: standard_analysis.yaml  template_multi_patient.yaml  template_multi_patient_test.yaml  test_analysis.yaml
data/: biopsies.tar  biopsies_all.tar  create_test_patients.sh  output.csv  test_output.csv  tracerx_2017_init.csv  (+1 more)
(+138 files in other folders)
