[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mase-phi-hpc"
version = "0.1.0"
description = "Mase-phi High Performance Computing pipeline for phylogenetic analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "ete3>=3.1",
    "graphviz",
    "python-graphviz",
    "lxml>=4.9",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]
markers = [
    "gurobipy>=11.0.2",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "B"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"